--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokemon-Dex</title>
 	<link rel="stylesheet" href="style.css">
+
+	<link rel="shortcut icon" href="https://w7.pngwing.com/pngs/173/464/png-transparent-pokemon-ball-pokeball-area-wiki-technology-thumbnail.png">
 </head>
 <body> 
 	<h1>
@@ -15,11 +17,10 @@
 			<input type="text" id="search">
 			<button id="btn">Search</button>
 		</div>
-		<div class="box-2" id="box-2"> 
-			<ol id="ol">  
-			</ol>
+		<div class="box-2" id="box-2">  
 		</div>
 	</div>
-	<script src="script.js"></script>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
