--- a/index.html
+++ b/index.html
@@ -3,21 +3,53 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokemon-Dex</title>
+	<title>PokemonDex</title>
 	<link rel="stylesheet" href="style.css">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="shortcut icon" href="https://w7.pngwing.com/pngs/173/464/png-transparent-pokemon-ball-pokeball-area-wiki-technology-thumbnail.png">
 </head>
 <body> 
-	<h1>
-		Cari Pokemon
-	</h1>
+	<nav>
+		<h1>
+			Cari Pokemon
+		</h1>	
+		<div class="link">
+			<a href="#" class="active">
+				Home
+			</a>
+			<a href="listPokemon.html">
+				My Pokemon
+			</a>
+		</div>
+	</nav>
+	
 	<div class="container"> 
 		<div class="box">
 			<input type="text" id="search">
 			<button id="btn">Search</button>
 		</div>
 		<div class="box-2" id="box-2">  
+		</div>
+	</div>
+
+	<div class="modal-box" id="modal-box" style="transform: scale(0);">
+		<div class="modal-dialog" id="modal-dialog">
+			<div class="modal-header">
+				<h3 >
+					Detail
+				</h3>
+				<p class="btn-close" id="btn-close">
+					<i class="fa fa-window-close" aria-hidden="true"></i>
+				</p>
+			</div>
+			<div class="modal-body" id="modal-body">
+			</div>
+			<div class="modal-footer">
+				<div class="btn-catch" id="btnCatch">
+					Catch Pokemon!
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
