--- a/index.html
+++ b/index.html
@@ -23,36 +23,40 @@
 			</a>
 		</div>
 	</nav>
-	
-	<div class="container"> 
-		<div class="box">
-			<input type="text" id="search">
-			<button id="btn">Search</button>
-		</div>
-		<div class="box-2" id="box-2">  
-		</div>
-	</div>
 
-	<div class="modal-box" id="modal-box" style="transform: scale(0);">
-		<div class="modal-dialog" id="modal-dialog">
-			<div class="modal-header">
-				<h3 >
-					Detail
-				</h3>
-				<p class="btn-close" id="btn-close">
-					<i class="fa fa-window-close" aria-hidden="true"></i>
-				</p>
-			</div>
-			<div class="modal-body" id="modal-body">
-			</div>
-			<div class="modal-footer">
-				<div class="btn-catch" id="btnCatch">
-					Catch Pokemon!
-				</div>
-			</div>
-		</div>
+</div>
+<div class="container"> 
+	<div class="box">
+		<input type="text" id="search">
+		<button id="btn">Search</button>
+	</div>
+	<div class="box-2" id="box-2">  
 	</div>
 </div>
+
+<div class="modal-box" id="modal-box" style="transform: scale(0);">
+	<div class="modal-dialog" id="modal-dialog">
+		<div class="modal-header">
+			<h3 >
+				Detail
+			</h3>
+			<p class="btn-close" id="btn-close">
+				<i class="fa fa-window-close" aria-hidden="true"></i>
+			</p>
+		</div>
+		<div class="modal-body" id="modal-body">
+		</div>
+		<div class="modal-footer">
+			<div class="btn-catch" id="btnCatch">
+				Catch Pokemon!
+			</div>
+		</div>
+	</div>
+	<div class="alert" id="alert" style="display: none;">
+		<!-- <i class="fa fa-circle-check"></i>&nbsp; -->
+	</div>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
