--- a/listPokemon.html
+++ b/listPokemon.html
@@ -74,7 +74,7 @@
 			.then(pokemonData =>{   
 
 
-				var	pokemonImage = pokemonData['sprites']['versions']['generation-vi']['omegaruby-alphasapphire'].front_shiny;
+				var	pokemonImage = pokemonData2['sprites']['other']['official-artwork'].front_default;
 				if (pokemonImage == null) {
 					pokemonImage =  pokemonData['sprites']['versions']['generation-v']['black-white'].front_default; 
 				}
@@ -143,7 +143,8 @@
 				modalDialog.style.background = `linear-gradient(${color},#F9F9F9,#F3F2F2,#F9F9F9)`;
 				let img2 = document.createElement("img");
 
-				img2.src = pokemonData['sprites']['versions']['generation-v']['black-white']['animated'].front_shiny;
+				//img2.src = pokemonData['sprites']['versions']['generation-v']['black-white']['animated'].front_shiny;
+				img2.src = pokemonData['sprites']['other']['official-artwork'].front_shiny;
 
 
 				modalBody.innerHTML = ""; 
